--- a/Notions/001. Art.md
+++ b/Notions/001. Art.md
@@ -2,9 +2,9 @@
 
 ---
 
-**__(1) Qu'est-ce que l'art ?__** 
+# (1) Qu'est-ce que l'art ? 
 
-**__A] Une notion difficile à définir__** 
+## **__A] Une notion difficile à définir__** 
 
 L'art est une notion difficile à définir. On désigne par le terme d'art à la fois : 
 
@@ -16,19 +16,19 @@ L'art est une notion difficile à définir. On désigne par le terme d'art à la
 
 - La valeur plus ou moins artistique de ce résultat : par exemple, toutes les peintures ne sont pas considérées comme des œuvres d'art. 
 
-**__B] Art et technique__** 
+## **__B] Art et technique__** 
 
 S'il est difficile de définir avec précision le terme d'art, c’est d’abord parce que son sens a évolué historiquement. L'étymologie du mot (du latin *ars*, *artis*, « habileté, métier, connaissance technique ») indique que la distinction entre art, savoir et métier est assez tardive. Ainsi, on pouvait parler d'art de la guerre et l'astronomie était qualifiée d'art libéral. 
 
 Les Grecs définissaient l'art par la technique : le terme de technique vient du grec *technê* (« art » ou « habileté ») et désigne un savoir-faire, c'est-à-dire la capacité à mettre en œuvre des règles vraies et connues dans le but d'obtenir le résultat souhaité. 
 
-**__C] L'œuvre d'art est un objet artificiel__** 
+## **__C] L'œuvre d'art est un objet artificiel__** 
 
 Dans la Physique, Aristote (384 av. J.-C. - 322 av. J.-C.) définit une chose artificielle (par exemple une sculpture ou une chaise) comme ce qui ne possède pas son propre principe d'existence, au contraire des êtres naturels (les êtres vivants) qui contiennent en eux-mêmes le principe de changement, c'est-à-dire le principe de vie. 
 
 Les artifices reçoivent donc leur principe d'existence d’une force extérieure à eux, ils sont créés par une main extérieure. La distinction fondamentale aristotélicienne entre les corps est celle qui sépare ce qui est artificiel (*technê*) de ce qui naturel (*phusis*).
 
-**__D L’artisan et L'artiste__**
+## **__D] L’artisan et L'artiste__**
 
 Jusqu'à la Renaissance, on ne distingue pas véritablement l'artiste de l'artisan. Au XVIII siècle apparaît la notion de Beaux-Arts : l’art est donc désormais considéré à part, parce qu’il ne vise pas l'utilité, mais le beau, tandis que le domaine de la technique à proprement parler se définit par sa fin utilitaire, 
 
@@ -40,9 +40,9 @@ Chaque œuvre d’art obéit donc à des règles, mais appliquer ces règles ne 
 
 ---
 
-__**(2) À quoi sert une œuvre d'art ?**__
+# __**(2) À quoi sert une œuvre d'art ?**__
 
-**__A] L'art est inutile__** 
+## **__A] L'art est inutile__** 
 
 L'œuvre d'art est un objet sensible, c'est-à-dire qu'il s'adresse à mes sens, mais contrairement aux autres objets, je ne l'utilise pas. C’est pour cela que Kant explique dans la Critique de la faculté de juger que le plaisir esthétique (qui vient de la contemplation d’une œuvre d'art) est un plaisir désintéressé : ce n’est pas la consommation ou l’utilisation de l’œuvre d'art qui me procure du plaisir dans l'expérience esthétique. 
 
@@ -56,7 +56,7 @@ l'observateur la peur du Jugement et de l'Enfer, afin qu'il conforme sa vie aux 
 
 Cela signifie donc qu'en droit, tout peut être une œuvre d'art. Ce qui définit une œuvre d'art, c'est d'abord le rapport respectueux, mis à distance, désintéressé que j'entretiens avec elle. C'est d’ailleurs ce que veut signifier Marcel Duchamp (1887-1968) quand il cherche à exposer en 1917 à New York son œuvre Fontaine, qui n'est autre qu'un urinoir renversé, c'est-à-dire l’objet le plus banal et trivial qui soit. 
 
-**__B] juger Le beau__**
+## **__B] juger Le beau__**
 
 Si, en droit, tout peut être une œuvre d'art, qui décide alors qu’une œuvre est une œuvre d'art ? Quand j'estime que quelque chose est beau, quand je juge de la beauté d'une œuvre, tout le monde doit-il être d'accord avec moi ?
 
@@ -66,15 +66,15 @@ Néanmoins, si nous acceptons très bien que le jugement du caractère agréable
 
 ---
 
-(3) L'art doit-il imiter Le réel ? 
+# (3) L'art doit-il imiter Le réel ? 
 
-A L'art comme imitation du réel 
+## A] L'art comme imitation du réel 
 
 Si nous nous interrogeons sur le rapport entre l’art et le réel, il semble que la première fonction de l’art serait d'imiter la réalité, de rendre présent ce qui est absent, de représenter (au sens de présenter à nouveau) ce qu'on ne peut voir à l'instant. Ainsi, la peinture funéraire permet de garder en mémoire le visage du défunt. En ce sens, on peut dire que l’art sauve le réel, c'est-à-dire qu'il permet de sauvegarder ce qui disparaîtrait ou ne serait pas présent sans lui. 
 
 Mais Platon (428 av. J.-C. - 348 av. J.-C.) critique cette idée que l’art imiterait la réalité, Ainsi, dans la République, il compare l'artiste et l'artisan : Par exemple, si l'artisan fabrique un lit et que l'artiste en représente un en peinture, les deux créent en quelque sorte un lit, mais le lit que peint l'artiste n’est qu’une copie de l’apparence du lit, et non pas une véritable imitation de la réalité. L'artiste est un piètre imitateur, car il ne sait produire que l’image des choses. Il y a pour Platon une forme de mensonge de l’art qui semble imiter la réalité mais qui ne produit que l'illusion de cette réalité : l’art nous détournerait alors du réel. 
 
-B L'art comme dévoilement du réel 
+## B] L'art comme dévoilement du réel 
 
 Pourtant, il est possible de remettre en question cette critique de l’art comme illusion : si l’art imite mal le réel, ce serait parce qu’il ne vise en fait pas son imitation. Ainsi, Friedrich Hegel (1770-1831) explique dans l'Esthétique que l’art ne doit pas avoir pour but d’imiter la nature, car il s'agirait d’une activité inutile (la nature crée déjà ses propres objets) et présomptueuse (« l’art est limité dans ses moyens d'expression et ne peut produire que des illusions partielles »). De plus, certains arts n'ont jamais eu pour but d’imiter la nature (par exemple l'architecture ou la poésie), et surtout, « limitation ne peut produire que des chefs-d'œuvre de la technique, jamais des œuvres d'art » : reproduire de la manière la plus exacte possible un objet naturel ne serait qu'une prouesse technique, et non une qualité artistique. 
 
