--- a/Notions/001. Art.md
+++ b/Notions/001. Art.md
@@ -1,4 +1,4 @@
-*L'art est une notion difficile à définir, car ce terme revêt plusieurs sens. Or, cette difficulté à définir l'art entraîne nécessairement des questionnements sur la spécificité des œuvres artistiques (tout objet peut-il être une œuvre d'art ?), sur le statut de l'artiste (l'artiste exerce-t-il une profession comme les autres ?) et sur les limites du champ artistique (le jeu vidéo peut-il être considéré comme une forme d'art ?).*
+*L'ambiguïté dans la définition de l'art engendre inévitablement des interrogations sur la singularité des productions artistiques (tout objet peut-il être considéré comme une œuvre d'art ?), sur le statut du créateur (le créateur exerce-t-il une activité similaire aux autres métiers ?) et sur les frontières du domaine artistique (un jeu vidéo peut-il être considéré comme une forme d'art ?).*
 
 ---
 
@@ -6,37 +6,30 @@
 
 ## **__A] Une notion difficile à définir__** 
 
-L'art est une notion difficile à définir. On désigne par le terme d'art à la fois : 
+L'art désigne tantôt : 
 
-- L’activité productrice consistant à fabriquer des objets : les œuvres d'art ; 
-
-- La technique utilisée pour leur fabrication : art de la peinture ou art de la sculpture ; 
-
-- Le résultat de cette activité et de cette technique : l'œuvre en elle-même ; 
-
-- La valeur plus ou moins artistique de ce résultat : par exemple, toutes les peintures ne sont pas considérées comme des œuvres d'art. 
+- L’activité qui consiste fabriquer des objets : les œuvres d'art ; 
+  - Ou bien la technique utilisée pour cette fabrication : art de la peinture ou art de la sculpture ; 
+    - Ou bien leur résultat : l'œuvre en elle-même ; 
+      - Ou bien encore sa valeur plus ou moins artistique : toutes les œuvres ne sont pas considérées comme des œuvres d'art. 
 
 ## **__B] Art et technique__** 
 
-S'il est difficile de définir avec précision le terme d'art, c’est d’abord parce que son sens a évolué historiquement. L'étymologie du mot (du latin *ars*, *artis*, « habileté, métier, connaissance technique ») indique que la distinction entre art, savoir et métier est assez tardive. Ainsi, on pouvait parler d'art de la guerre et l'astronomie était qualifiée d'art libéral. 
+L'étymologie du mot (du latin *ars*, *artis*, « habileté, métier, connaissance technique ») indique qu'originellement, "art", "savoir" et "métier" signifiaient globalement la même chose. Au V siècle av. J.-C. Sun Tzu écrivait ansi l'__*Art de la guerre*__ et dans le basin méditérannéen l'astronomie était qualifiée d'art "libéral". 
 
-Les Grecs définissaient l'art par la technique : le terme de technique vient du grec *technê* (« art » ou « habileté ») et désigne un savoir-faire, c'est-à-dire la capacité à mettre en œuvre des règles vraies et connues dans le but d'obtenir le résultat souhaité. 
+Si l'art vient alors pour nous du latin, les Grecs avaiennt eux un autre mot pour le signifier : la ***technique***. Pour un Grec, l'art se définit par la technique : le terme de technique vient du grec *technê* (« art » ou « habileté ») et désigne un savoir-faire, c'est-à-dire la capacité à mettre en œuvre des règles vraies et connues dans le but d'obtenir le résultat souhaité ; savoir suivre des instructions qui fonctionnent. 
 
 ## **__C] L'œuvre d'art est un objet artificiel__** 
 
-Dans la Physique, Aristote (384 av. J.-C. - 322 av. J.-C.) définit une chose artificielle (par exemple une sculpture ou une chaise) comme ce qui ne possède pas son propre principe d'existence, au contraire des êtres naturels (les êtres vivants) qui contiennent en eux-mêmes le principe de changement, c'est-à-dire le principe de vie. 
-
-Les artifices reçoivent donc leur principe d'existence d’une force extérieure à eux, ils sont créés par une main extérieure. La distinction fondamentale aristotélicienne entre les corps est celle qui sépare ce qui est artificiel (*technê*) de ce qui naturel (*phusis*).
+Dans la Physique, Aristote (384 av. J.-C. - 322 av. J.-C.) dit qu'une chose est artificielle, si et seulement si elle ne possède pas son propre principe d'existence. Une chaise ne contient pas en elle-même son propre principe d'existence, quelqu'un l'a créée par une maint extérieur, contrairement aux humains qui possèdent la vie, leur propre principe de changement. Il y a donc deux types de corps : les corps artificiels (*technê*) et les corps naturels (*phusis*).
 
 ## **__D] L’artisan et L'artiste__**
 
-Jusqu'à la Renaissance, on ne distingue pas véritablement l'artiste de l'artisan. Au XVIII siècle apparaît la notion de Beaux-Arts : l’art est donc désormais considéré à part, parce qu’il ne vise pas l'utilité, mais le beau, tandis que le domaine de la technique à proprement parler se définit par sa fin utilitaire, 
+Au XVIII siècle apparaît la notion de Beaux-Arts : on va désormais opérer la distinction entre l'artiste et l'artisan. L’art ne vise plus l'utilité  mais le beau, tandis que le l'artisana (la technique) vise une utilité.
 
-À partir de cette distinction, le statut de l'artiste change. Les artistes commencent à signer leurs œuvres et ce qui fait la valeur d’un artiste, et donc de l’œuvre d'art, n’est plus uniquement le degré de maîtrise technique employée, mais le don, le talent de créer une œuvre qui soit à la fois originale et susceptible de servir de modèle, 
+À partir de cette distinction, le statut de l'artiste change. Ils commencent à signer leurs œuvres dont la valeur est directement reliée au talent qu'ils ont pour créer une œuvre qui soit à la fois originale et susceptible de servir de modèle. 
 
-Cette idée se retrouve dans le concept de génie que définit ainsi Emmanuel Kant (1724-1804) dans la Critique de la faculté de juger : « le talent naturel qui donne ses règles à l'art », Le génie de l'artiste est un don de la nature qui lui permet de créer une œuvre obéissant à des règles ; cependant, il ne peut rendre compte de ces règles, elles ne sont pas démontrables, 
-
-Chaque œuvre d’art obéit donc à des règles, mais appliquer ces règles ne permet pas nécessairement de fabriquer un chef-d'œuvre. C'est en cela que l’art diffère de la technique, ou même de la science : il n’y a pas de « mode d'emploi » déterminé à l'avance qui permettrait de garantir le caractère artistique d’une œuvre. 
+Emmanuel Kant (1724-1804) définit aisi le concept de ***génie*** dans la __*Critique de la faculté de juger*__ : « le talent naturel qui donne ses règles à l'art », Le génie de l'artiste est un don naturel lui permettant de créer une œuvre obéissant à des règles qui ne sont pas démontrables, c'est-à-dire qui, une fois consiérées indépendament et appliquées par la suite, ne permet pas nécessairement de fabriquer un chef-d'œuvre :  il n’y a pas de « mode d'emploi » déterminé à l'avance qui permettrait de garantir le caractère artistique d’une œuvre,contrairement à la technique et à la science. 
 
 ---
 
@@ -44,7 +37,7 @@ Chaque œuvre d’art obéit donc à des règles, mais appliquer ces règles ne 
 
 ## **__A] L'art est inutile__** 
 
-L'œuvre d'art est un objet sensible, c'est-à-dire qu'il s'adresse à mes sens, mais contrairement aux autres objets, je ne l'utilise pas. C’est pour cela que Kant explique dans la Critique de la faculté de juger que le plaisir esthétique (qui vient de la contemplation d’une œuvre d'art) est un plaisir désintéressé : ce n’est pas la consommation ou l’utilisation de l’œuvre d'art qui me procure du plaisir dans l'expérience esthétique. 
+Un verre a une finalité, une chaise également : je peux les "utiliser", être leur "utilisateur". Mais pas l'art. Quand j'ai du plaisir à boire un verre d'eau mon plaisir est intéressé, je peux consommer quelque-chose afin de combler un désir, ou un besoin.  Kant explique dans la __*Critique de la faculté de juger*__ que le ***plaisir esthétique*** (qui vient de la contemplation d’une œuvre d'art) est un plaisir ***désintéressé*** : ce n’est pas la consommation ou l’utilisation de l’œuvre d'art qui me procure du plaisir dans l'expérience esthétique. 
 
 L'art se définit donc par sa fin, qui est non utilitaire. En fait, la plupart des œuvres d'art avaient une utilité au moment de leur création, mais c’est une fois que cette utilité s’est estompée qu'on peut véritablement dire que l'œuvre est une œuvre d'art. 
 
