Update 001. La vérité.md

--- a/Notions/test/001. La vérité.md
+++ b/Notions/test/001. La vérité.md
@@ -1,4 +1,6 @@
 
+ ---
+
 - Partie 1 : La logique et la science
   - Référence : Bertrand Russell, "La science et la logique"
   - Thèse : La logique est un outil essentiel pour la science car elle permet de formaliser les raisonnements et de les rendre explicites.
@@ -27,40 +29,138 @@
   - Référence : John Stuart Mill, Système de logique déductive et inductive
   - Thèse : La logique n'est pas seulement utile pour la science, elle peut également aider à penser de manière rigoureuse dans la vie quotidienne et à éviter les erreurs de raisonnement.
 
+---
 
-# Y a-t-il une méthode pour accéder à la vérité ?
+# 1- Y a-t-il une méthode pour accéder à la vérité ?
 
 ## A] La logique
 
-### a Presentation de la logique propositionnelle
+### a) Presentation de la logique propositionnelle
 
-La logique propositionnelle est une branche de la logique qui s'occupe des propositions, c'est-à-dire des phrases ou expressions qui peuvent être vraies ou fausses. La logique propositionnelle utilise des symboles pour représenter ces propositions, ainsi que des connecteurs logiques pour combiner ces propositions. Les connecteurs logiques les plus courants sont la négation, la conjonction, la disjonction, l'implication et l'équivalence.
+La logique propositionnelle est une branche de la logique qui s'occupe des propositions, c'est-à-dire des phrases ou expressions qui peuvent être vraies ou fausses. La logique propositionnelle utilise des symboles pour représenter ces propositions, ainsi que des connecteurs logiques pour combiner ces propositions.
 
-Les tables de vérité sont un outil important de la logique propositionnelle. Elles permettent de déterminer la valeur de vérité d'une expression logique en fonction des valeurs de vérité de ses composantes. Par exemple, la table de vérité pour la conjonction (ET) est la suivante :
+Les tables de vérité sont un outil important de la logique propositionnelle. Elles permettent de déterminer la valeur de vérité d'une expression logique en fonction des valeurs de vérité de ses composantes. 
 
-P	Q	P ET Q
-V	V	V
-V	F	F
-F	V	F
-F	F	F
+Il existe cinq connecteurs logiques de base en logique propositionnelle, chacun ayant une table de vérité correspondante. Les cinq connecteurs sont :
+- la négation (NON : `¬`)
+- la conjonction (ET : `∧`)
+- la disjonction (OU : `∨`)
+- l'implication (SI...ALORS `→`)
+- l'équivalence (SI ET SEULEMENT SI `↔`). 
+
+
+Voici les tables de vérité pour chacun de ces connecteurs, avec des exemples pour chaque table :
+
+1.  Négation (NON) :
+
+| P | NON P |
+| --- | --- |
+| V | F |
+| F | V |
+
+`Exemple : NON Vrai donne Faux, NON Faux donne Vrai.`
+
+2.  Conjonction (ET) :
+
+| P | Q | P ET Q |
+| --- | --- | --- |
+| V | V | V |
+| V | F | F |
+| F | V | F |
+| F | F | F |
+
+`Exemple : Si P est "Il pleut" et Q est "Je suis mouillé", alors P ET Q est vrai si et seulement si il pleut et je suis mouillé.`
+
+3.  Disjonction (OU) :
+
+| P | Q | P OU Q |
+| --- | --- | --- |
+| V | V | V |
+| V | F | V |
+| F | V | V |
+| F | F | F |
+
+`Exemple : Si P est "J'ai un chien" et Q est "J'ai un chat", alors P OU Q est vrai si j'ai un chien ou si j'ai un chat.`
+
+4.  Implication (SI...ALORS) :
+
+| P | Q | P → Q |
+| --- | --- | --- |
+| V | V | V |
+| V | F | F |
+| F | V | V |
+| F | F | V |
+
+`Exemple : Si P est "Il pleut" et Q est "Je prends un parapluie", alors P → Q est vrai si, lorsque il pleut, je prends un parapluie.`
+
+5.  Équivalence (SI ET SEULEMENT SI) :
+
+| P | Q | P ↔ Q |
+| --- | --- | --- |
+| V | V | V |
+| V | F | F |
+| F | V | F |
+| F | F | V |
+
+`Exemple : Si P est "Je suis célibataire" et Q est "Je n'ai pas de petit ami/petite amie", alors P ↔ Q est vrai si et seulement si je suis célibataire si et seulement si je n'ai pas de petit ami/petite amie.`
+
+### b) Application du calcul des propositions
+
+Par exemple, la table de vérité pour la conjonction (ET) est la suivante :
+
+| P | Q | P ∧ Q |
+| --- | --- | --- |
+| V | V | V |
+| V | F | F |
+| F | V | F |
+| F | F | F |
+
 Pour utiliser cette table, il suffit de remplacer les variables P et Q par leur valeur de vérité respective (V pour vrai, F pour faux) et de trouver la valeur de vérité de l'expression P ET Q. Par exemple, si P est vrai et Q est faux, alors l'expression P ET Q est fausse.
+
+---
 
 Voici quelques exercices de formalisation en logique propositionnelle :
 
 - "Si la journée est ensoleillée, alors je vais à la plage." 
   - Formulez cette proposition en utilisant des symboles et des connecteurs logiques.
-  - Réponse : P → Q, où P représente la proposition "la journée est ensoleillée" et Q représente la proposition "je vais à la plage".
+    - Réponse : P → Q, où P représente la proposition "la journée est ensoleillée" et Q représente la proposition "je vais à la plage".
 
 - "Je mange des fruits et des légumes tous les jours, ou bien je prends des vitamines." 
   - Formulez cette proposition en utilisant des symboles et des connecteurs logiques.
-  - Réponse : P ∨ Q, où P représente la proposition "je mange des fruits et des légumes tous les jours" et Q représente la proposition "je prends des vitamines".
+    - Réponse : P ∨ Q, où P représente la proposition "je mange des fruits et des légumes tous les jours" et Q représente la proposition "je prends des vitamines".
 
 - "Si je réussis mon examen, alors je fête ça ce soir." 
   - Formulez cette proposition en utilisant des symboles et des connecteurs logiques.
-  - Réponse : P → Q, où P représente la proposition "je réussis mon examen" et Q représente la proposition "je fête ça ce soir".
+    - Réponse : P → Q, où P représente la proposition "je réussis mon examen" et Q représente la proposition "je fête ça ce soir".
 
 
+### c) La logique comme outil pour permettre de rendre explicite des présupposés
 
+- **Syllogisme** : Un exemple classique de raisonnement logique est le syllogisme. Par exemple, "tous les hommes sont mortels, Socrate est un homme, donc Socrate est mortel" est un syllogisme qui peut être formalisé en utilisant la logique propositionnelle et la logique des prédicats.
+- **Modus Ponens** : La logique peut également formaliser des raisonnements conditionnels, tels que le Modus Ponens, qui est une forme de raisonnement qui affirme qu'une proposition est vraie si une autre proposition est vraie. Par exemple, si "si A est vrai, alors B est vrai" et "A est vrai", alors la logique peut formaliser que "B est vrai".
+- **Preuve par contradiction** : La logique peut également formaliser des preuves par contradiction, où l'on suppose que quelque chose est vrai, puis on montre que cela conduit à une contradiction logique. Par exemple, pour prouver que la racine carrée de 2 est irrationnelle, on peut supposer le contraire (c'est-à-dire que la racine carrée de 2 est rationnelle), puis utiliser la logique pour montrer que cela conduit à une contradiction.
+- **Utilisation de diagrammes de Venn** : La logique peut également être utilisée pour formaliser des raisonnements qui impliquent des ensembles. Les diagrammes de Venn sont un exemple d'outil de visualisation qui peut être utilisé pour formaliser de tels raisonnements, en montrant les intersections et les différences entre les ensembles.
+- **Algorithmes** : La logique est également utilisée pour formaliser des algorithmes, qui sont des séquences d'instructions logiques qui peuvent être suivies pour résoudre un problème. Par exemple, la logique est utilisée pour formaliser les algorithmes de tri, tels que le tri à bulles, le tri par insertion, le tri rapide, etc.
 
+→ Exemple d'utilisation de la logique des propositions pour montrer la contradiction d'un énnoncé :
 
+Voici un exemple de phrase contradictoire :
 
+"Le chat est à la fois noir et blanc, et il n'est ni noir ni blanc."
+
+En logique propositionnelle, on peut formaliser cette phrase comme suit :
+
+```
+P : "Le chat est noir et blanc."
+Q : "Le chat n'est ni noir ni blanc."
+```
+La proposition "P ∧ ¬P" est contradictoire car elle affirme que le chat est noir et blanc, et en même temps qu'il n'est ni noir ni blanc.
+
+On peut le démontrer en utilisant une preuve par contradiction :
+
+Supposons que P ∧ ¬P soit vrai.
+
+Alors, P est vrai (par simplification de P ∧ ¬P).
+Et ¬P est vrai (par simplification de P ∧ ¬P).
+
+Cela implique que le chat est noir et blanc, et en même temps qu'il n'est ni noir ni blanc. Ce qui est une contradiction. Par conséquent, la proposition "Le chat est à la fois noir et blanc, et il n'est ni noir ni blanc" est contradictoire en logique propositionnelle.
