--- a/Notions/001. Art.md
+++ b/Notions/001. Art.md
@@ -15,9 +15,9 @@ L'art désigne tantôt :
 
 ## **__B] Art et technique__** 
 
-L'étymologie du mot (du latin *ars*, *artis*, « habileté, métier, connaissance technique ») indique qu'originellement, "art", "savoir" et "métier" signifiaient globalement la même chose. Au V siècle av. J.-C. Sun Tzu écrivait ansi l'__*Art de la guerre*__ et dans le basin méditérannéen l'astronomie était qualifiée d'art "libéral". 
+L'étymologie du mot (du latin *ars*, *artis*, « habileté, métier, connaissance technique ») indique qu'originellement, "art", "savoir" et "métier" signifiaient globalement la même chose. Au V siècle av. J.-C. Sun Tzu écrivait ansi l'__*Art de la guerre*__ et dans le basin méditerranéen l'astronomie était qualifiée d'art "libéral". 
 
-Si l'art vient alors pour nous du latin, les Grecs avaiennt eux un autre mot pour le signifier : la ***technique***. Pour un Grec, l'art se définit par la technique : le terme de technique vient du grec *technê* (« art » ou « habileté ») et désigne un savoir-faire, c'est-à-dire la capacité à mettre en œuvre des règles vraies et connues dans le but d'obtenir le résultat souhaité ; savoir suivre des instructions qui fonctionnent. 
+Si l'art vient alors pour nous du latin, les Grecs avaient eux un autre mot pour le signifier : la ***technique***. Pour un Grec, l'art se définit par la technique : le terme de technique vient du grec *technê* (« art » ou « habileté ») et désigne un savoir-faire, c'est-à-dire la capacité à mettre en œuvre des règles vraies et connues dans le but d'obtenir le résultat souhaité ; savoir suivre des instructions qui fonctionnent. 
 
 ## **__C] L'œuvre d'art est un objet artificiel__** 
 
@@ -29,7 +29,7 @@ Au XVIII siècle apparaît la notion de Beaux-Arts : on va désormais opérer la
 
 À partir de cette distinction, le statut de l'artiste change. Ils commencent à signer leurs œuvres dont la valeur est directement reliée au talent qu'ils ont pour créer une œuvre qui soit à la fois originale et susceptible de servir de modèle. 
 
-Emmanuel Kant (1724-1804) définit aisi le concept de ***génie*** dans la __*Critique de la faculté de juger*__ : « le talent naturel qui donne ses règles à l'art », Le génie de l'artiste est un don naturel lui permettant de créer une œuvre obéissant à des règles qui ne sont pas démontrables, c'est-à-dire qui, une fois consiérées indépendament et appliquées par la suite, ne permet pas nécessairement de fabriquer un chef-d'œuvre :  il n’y a pas de « mode d'emploi » déterminé à l'avance qui permettrait de garantir le caractère artistique d’une œuvre,contrairement à la technique et à la science. 
+Emmanuel Kant (1724-1804) définit aisi le concept de ***génie*** dans la __*Critique de la faculté de juger*__ : « le talent naturel qui donne ses règles à l'art », Le génie de l'artiste est un don naturel lui permettant de créer une œuvre obéissant à des règles qui ne sont pas démontrables, c'est-à-dire qui, une fois considérées indépendamment et appliquées par la suite, ne permet pas nécessairement de fabriquer un chef-d'œuvre :  il n’y a pas de « mode d'emploi » déterminé à l'avance qui permettrait de garantir le caractère artistique d’une œuvre,contrairement à la technique et à la science. 
 
 ---
 
