Update 002. La justice.md

--- a/Notions/002. La justice.md
+++ b/Notions/002. La justice.md
@@ -14,7 +14,7 @@ La justice est souvent représentée sous les traits d’une femme tenant une ba
 
 ## B] Le problème du critère de justice 
 
-« Plaisante justice qu’une rivière borne ! Vérité en-deçà des Pyrénées, erreur au-delà » : par cette phrase, Blaise Pascal (1623-1662) résume bien, dans les Pensées, la difficulté à définir le juste. Comme idéal, nous voudrions que la justice, comme la vérité, soit universelle. Mais nous sommes forcés de constater que ce qui est considéré comme juste dans un pays ne l'est pas nécessairement dans un autre: le juste s’incarne différemment dans les normes et les lois de chaque État et de chaque peuple. 
+« Plaisante justice qu’une rivière borne ! Vérité en deçà des Pyrénées, erreur au-delà » : par cette phrase, Blaise Pascal (1623-1662) résume bien, dans les Pensées, la difficulté à définir le juste. Comme idéal, nous voudrions que la justice, comme la vérité, soit universelle. Mais nous sommes forcés de constater que ce qui est considéré comme juste dans un pays ne l'est pas nécessairement dans un autre: le juste s’incarne différemment dans les normes et les lois de chaque État et de chaque peuple. 
 
 Dans l'Éthique à Nicomaque, Aristote (384 av. J.-C.-322 av. J.-C.) propose de définir le juste par l'égal : Agir avec justice, ce serait traiter chacun avec égalité (incarnée par la balance de la justice) sur le modèle de la justesse en mathématique. Mais on peut avoir deux conceptions différentes de ce que cela veut dire. 
 
